syntax = "proto3";
package com.snapchat.showcase.wire.response;
option optimize_for = CODE_SIZE;
option csharp_namespace = "SnapProto.Com.Snapchat.Showcase.Wire.Response";

message ErrorInfo {
    string code = 1;
    string message = 2;
    int32 HTTPStatusCode = 3;
}