syntax = "proto3";
package snapchat.content.v2;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCBoltv2";
option csharp_namespace = "SnapProto.Snapchat.Content.V2";

import "snapchat/content/v2/SCBoltv2GetUploadLocations.proto";
import "snapchat/content/v2/SCBoltv2UploadLocation.proto";

message GetUploadLocationsByKeyRequest {
    .snapchat.content.v2.SCBoltv2GetUploadLocationsRequest.SCBoltv2ContentReferenceResultOption contentReferenceResultOption = 1;
    repeated .snapchat.content.v2.GetUploadLocationsByKeyRequest.UploadLocationsByKeyRequest requests = 2;
    message UploadLocationsByKeyRequest {
        bytes uploadLocationCacheKey = 1;
        uint32 batchSize = 2;
    }
}

message GetUploadLocationsByKeyResponse {
    repeated .snapchat.content.v2.GetUploadLocationsByKeyResponse.UploadLocationsByKeyResponse responses = 1;
    message UploadLocationsByKeyResponse {
        int32 statusCode = 1;
        bytes uploadLocationCacheKey = 2;
        repeated .snapchat.content.v2.SCBoltv2UploadLocation uploadLocations = 3;
    }
}